fix overflow issue for short pages

--- a/style.css
+++ b/style.css
@@ -461,6 +461,8 @@ h1, h2, h3, h4, h5, h6 { break-after: avoid; }
 {
 	/* → settings: custom typesetting */
 	
+	body.typesetting { overflow: auto scroll; }
+	
 	body.typesetting > main .p
 	{
 		white-space: nowrap;
